--- a/README
+++ b/README
@@ -2,7 +2,7 @@ DESCRIPTION
 
 EpServerEngine makes it easier for Visual C++ developers to develop a server/client application. 
 You will no longer have to spend hard time to figure out how to initialize/use WinSock library. 
-EpServerEngine supports Visual C++ 2005/2008/2010..
+EpServerEngine supports Visual C++ 2005/2008/2010.
 Source can be downloaded at <http://github.com/juhgiyo/epserverengine>
 
 
