--- a/README
+++ b/README
@@ -43,7 +43,7 @@ What is in the EpServerEngine?
 
 DOCUMENTATION
 
-For detailed documentation, please download the full document (EpServerEngine Documentation.chm) at <https://github.com/downloads/juhgiyo/EpServerEngine/EpServerEngine%20Documentation.chm>.
+For detailed documentation, please download the full document (EpServerEngine Documentation.chm) at <https://s3.amazonaws.com/elasticbeanstalk-us-east-1-052504677345/Downloads/EpServerEngine/EpServerEngine+Documentation.chm>.
 
 If the documentation file is not visible after finishing download,
 * Solution 1.
